Update client service to version 1.0.2 with enhanced security context and image pull policy. Modify backend service to improve error handling with new retry and circuit breaker configurations. Add RestTemplate bean for backend calls and update application properties for resilience settings.

--- a/client-service-deployment.yaml
+++ b/client-service-deployment.yaml
@@ -14,6 +14,11 @@ spec:
     spec:
       containers:
       - name: client-service
-        image: estherli17/client-service:1.0.0
+        image: estherli17/client-service:1.0.2
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
+        securityContext:
+          capabilities:
+            add:
+            - NET_ADMIN
