--- a/client-service/src/main/resources/application.properties
+++ b/client-service/src/main/resources/application.properties
@@ -4,9 +4,21 @@ backend.service.url=http://backend-service:8081
 # === Resilience4j Circuit Breaker configuration ===
 
 resilience4j.circuitbreaker.instances.backendCB.register-health-indicator=true
-resilience4j.circuitbreaker.instances.backendCB.failure-rate-threshold=50
-resilience4j.circuitbreaker.instances.backendCB.sliding-window-size=4
+resilience4j.circuitbreaker.instances.backendCB.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.backendCB.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.backendCB.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.backendCB.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.instances.backendCB.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.backendCB.minimum-number-of-calls=4
 resilience4j.circuitbreaker.instances.backendCB.permitted-number-of-calls-in-half-open-state=2
 resilience4j.circuitbreaker.instances.backendCB.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.backendCB.automatic-transition-from-open-to-half-open-enabled=true
+
+# === Resilience4j Retry configuration with Exponential Backoff and Jitter ===
+resilience4j.retry.instances.backendRetry.maxAttempts=5
+resilience4j.retry.instances.backendRetry.waitDuration=1s
+resilience4j.retry.instances.backendRetry.enableExponentialBackoff=true
+resilience4j.retry.instances.backendRetry.exponentialBackoffMultiplier=2
+resilience4j.retry.instances.backendRetry.enableRandomizedWait=true
+resilience4j.retry.instances.backendRetry.randomizedWaitFactor=0.5
+resilience4j.retry.instances.backendRetry.retryExceptions=org.springframework.web.client.HttpServerErrorException,org.springframework.web.client.HttpClientErrorException
